Add logout jwt blacklist and update logging to allow for level
