# backend/docs/swagger.yaml
@@ -6,8 +6,6 @@ definitions:
         type: string
       password:
         type: string
-      username:
-        type: string
     type: object
   auth.LoginResponse:
     properties:
@@ -30,23 +28,6 @@ info:
   title: HereWeGo API
   version: 0.0.1
 paths:
-  /:
-    get:
-      consumes:
-      - application/json
-      description: Returns a hello world message
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Returns a hello world message
-      tags:
-      - System
   /auth/login:
     post:
       consumes:
@@ -75,6 +56,8 @@ paths:
       responses:
         "200":
           description: OK
+      security:
+      - ApiKeyAuth: []
       summary: Logout
       tags:
       - Auth
@@ -108,7 +91,25 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - ApiKeyAuth: []
       summary: Returns the health of the database server
       tags:
       - System
+  /ping:
+    get:
+      description: Ping
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Ping
+      tags:
+      - System
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
